# guise

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/gallery/: Cargo.toml
crates/gallery/src/: code.rs  main.rs  sections.rs
crates/guise/: Cargo.toml  README.md
crates/guise/examples/: markdown.rs
crates/guise/src/: actionicon.rs  anchor.rs  apptests.rs  badge.rs  blockquote.rs  button.rs  card.rs  carousel.rs  chip.rs  closebutton.rs  code.rs  copybutton.rs  divider.rs  icon.rs  image.rs  indicator.rs  kbd.rs  lib.rs  macros.rs  mark.rs  panel.rs  paper.rs  scrollarea.rs  skeleton.rs  splitpanel.rs  spoiler.rs  style.rs  text.rs  themeicon.rs  title.rs  transition.rs  webview.rs
crates/guise/src/anim/: ease.rs  mod.rs  presence.rs  spring.rs
crates/guise/src/chart/: area.rs  axis.rs  bar.rs  frame.rs  line.rs  mod.rs  pie.rs  scatter.rs  sparkline.rs
crates/guise/src/data/: accordion.rs  avatar.rs  avatargroup.rs  dataview.rs  list.rs  mod.rs  tabbar.rs  table.rs  tabs.rs  timeline.rs  tree.rs  virtuallist.rs
crates/guise/src/data/tableview/: mod.rs  state.rs
crates/guise/src/dnd/: chip.rs  draggable.rs  droptarget.rs  mod.rs  sortable.rs
crates/guise/src/editor/: cache.rs  diagnostic.rs  editor.rs  highlight.rs  mod.rs  model.rs  treesitter.rs
crates/guise/src/feedback/: alert.rs  loader.rs  mod.rs  notification.rs  progress.rs  ringprogress.rs  toast.rs
crates/guise/src/flex/: container.rs  flexible.rs  mod.rs  rowcolumn.rs  stack.rs  wrap.rs
crates/guise/src/icon/: lucide.rs  mod.rs
crates/guise/src/input/: accept.rs  autocomplete.rs  calendar.rs  checkbox.rs  checkboxgroup.rs  colorinput.rs  combobox.rs  date.rs  datepicker.rs  dropzone.rs  edit.rs  field.rs  fileinput.rs  keys.rs  mod.rs  number.rs  password.rs  pin.rs  radio.rs  radiogroup.rs  rangeslider.rs  rating.rs  segmented.rs  select.rs  slider.rs  switch.rs  tags.rs  text.rs  textarea.rs  time.rs  timepicker.rs  transfer.rs
crates/guise/src/layout/: appshell.rs  breakpoint.rs  center.rs  container.rs  grid.rs  group.rs  mod.rs  space.rs  stack.rs
crates/guise/src/markdown/: block.rs  editor.rs  inline.rs  layout.rs  mod.rs
crates/guise/src/nav/: breadcrumbs.rs  mod.rs  navigationmenu.rs  navlink.rs  pagination.rs  statusbar.rs  stepper.rs
crates/guise/src/overlay/: confirm.rs  contextmenu.rs  drawer.rs  host.rs  hovercard.rs  loading.rs  menu.rs  menubar.rs  mod.rs  modal.rs  popover.rs  spotlight.rs  tooltip.rs  tour.rs
crates/guise/src/panegroup/: drag.rs  group.rs  id.rs  layout.rs  mod.rs  nav.rs  pane.rs  snapshot.rs  tree.rs
crates/guise/src/reactive/: binding.rs  context.rs  form.rs  hooks.rs  mod.rs  signal.rs
crates/guise/src/theme/: color.rs  css.rs  json.rs  mod.rs  palette.rs  presets.rs  tokens.rs
docs/: appguide.md  architecture.md  buttons.md  charts.md  components.md  data.md  dates.md  dnd.md  editor.md  feedback.md  files.md  flex.md  gettingstarted.md  icons.md  inputs.md  layout.md  macros.md  markdowneditor.md  navigation.md  overlays.md  panels.md  reactive.md  readme.md  theming.md  transitions.md  tutorial.md  typography.md  webview.md  windowmenu.md
scripts/: icons.ts
site/: build.ts  package.json
site/assets/: svg.ts
site/render/: bits.ts  doc.ts  docsindex.ts  gallery.ts  landing.ts  nav.ts  previews.ts  shell.ts
site/theme/: style.css
