[workspace]
resolver = "2"
members = ["crates/guise", "crates/gallery"]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"
authors = ["Wess Cope <opensource@wess.io>"]
repository = "https://github.com/wess/guise"
homepage = "https://github.com/wess/guise"
documentation = "https://docs.rs/guise"
keywords = ["gpui", "ui", "components", "mantine"]
categories = ["gui"]

[workspace.dependencies]
gpui = "0.2.2"
guise-ui = { path = "crates/guise" }

# The components track gpui's git line (newer than the crates.io 0.2.2 API), so
# redirect the crates.io gpui that `guise-ui` requests onto the exact zed rev
# they build against. Cargo patches don't propagate through git dependencies, so
# a consumer pinning guise via git must mirror this section (async-process /
# async-task are zed's own transitive patches).
[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed", rev = "96285fc1" }
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }

[profile.dev]
debug = "limited"

[profile.release]
lto = "thin"
