[workspace]
resolver = "2"
members = ["crates/guise", "crates/gallery"]

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "MIT"
authors = ["Wess Cope <opensource@wess.io>"]
repository = "https://github.com/wess/guise"
homepage = "https://github.com/wess/guise"
documentation = "https://docs.rs/guise"
keywords = ["gpui", "ui", "components", "mantine"]
categories = ["gui"]

[workspace.dependencies]
gpui = "0.2.2"
guise-ui = { path = "crates/guise" }

[profile.dev]
debug = "limited"

[profile.release]
lto = "thin"
