[package]
name = "gallery"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "gallery"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "96285fc1", features = ["font-kit"] }
guise-ui.workspace = true
