[package]
name = "gallery"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "gallery"
path = "src/main.rs"

[features]
# Swap the editor showcase onto the tree-sitter backend:
#   cargo run -p gallery --features treesitter
treesitter = ["guise-ui/treesitter", "dep:tree-sitter-rust"]

[dependencies]
gpui.workspace = true
guise-ui.workspace = true
tree-sitter-rust = { version = "0.24", optional = true }
