[package]
name = "guise-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Mantine-inspired component library for gpui, Zed's GPU-accelerated UI framework."
readme = "README.md"

# Published to crates.io as `guise-ui` (the `guise` name was taken), but the
# library is imported as `guise` — so `use guise::…` is unchanged for callers.
[lib]
name = "guise"

# docs.rs builds on Linux, where the default `webview` feature would need system
# WebKitGTK. Build the docs without it (the WebView API still appears).
[package.metadata.docs.rs]
no-default-features = true

[features]
default = ["webview"]
# Embed a native OS web view via `wry`. On Linux this needs the system
# WebKitGTK dev libs (`libwebkit2gtk-4.1-dev`). Disable for headless/docs-only
# builds; `WebView` then renders a themed placeholder with the same API.
webview = ["dep:wry"]
# Tree-sitter syntax highlighting for `Editor` (`TreeSitterHighlighter`).
# Ships no grammars — pass a grammar crate's `LANGUAGE` and highlight query,
# so only the languages an app actually uses get compiled in.
treesitter = ["dep:tree-sitter", "dep:tree-sitter-highlight"]

[dependencies]
gpui.workspace = true
tree-sitter = { version = "0.25", optional = true }
tree-sitter-highlight = { version = "0.25", optional = true }
wry = { version = "0.55", optional = true }

# Examples only: the app bootstrap (`application()`) lives outside gpui on
# the git line. Pin it to the same rev as the `[patch.crates-io]` gpui so the
# types unify. `font-kit` is required — without it the macOS platform falls
# back to a noop text system and no glyphs raster.
[dev-dependencies]
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "96285fc1", features = ["font-kit"] }
# Entity-level tests (`#[gpui::test]` + `TestAppContext`) — the same harness
# zed's own tests run on. Resolves to the patched rev like the main dep.
gpui = { version = "0.2.2", features = ["test-support"] }
# The tree-sitter adapter compiles under `cfg(any(test, feature))`, so plain
# `cargo test` exercises it against a real grammar without the feature.
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
